# LevelUp_project_csc430

./: .gitignore  Dockerfile.txt
level_up/: .env.docker  Dockerfile  db.sqlite3  input.css  mailgun_test.py  package-lock.json  pyproject.toml  tailwind.config.js
level_up/app/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
level_up/app/migrations/: 0002_create_superuser.py  0006_internship.py
level_up/level_up/: settings.py  urls.py
level_up/static/: input.css  output.css
level_up/templates/: base.html
level_up/templates/account/: login.html  signup.html
level_up/templates/allauth/elements/: h2.html
level_up/templates/app/: article_create.html  article_delete.html  article_update.html  base.html  home.html  levelup_home.html
level_up/templates/app/account/: login.html
level_up/templates/app/layouts/: base_form.html
level_up/templates/internships/: internship.html
level_up/templates/registration/: login.html
