[project]
name = "level-up"
version = "0.1.0"
description = ""
authors = [
    {name = "Egor Gusev",email = "egor.gusev2018@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2,<6.0)",
    "django-allauth[socialaccount] (>=65.7.0,<66.0.0)"
]

[tool.poetry]
packages = [{include = "level_up", from = "src"}]


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^5.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
